# term41

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TERMINAL_EXTENSIONS_ROADMAP.md  VT_COMPATIBILITY_ROADMAP.md  build.rs
benches/: vte_parse.rs
clip41/: Cargo.toml
clip41/src/: lib.rs
commands41/: Cargo.toml
commands41/src/: completion.rs  editing.rs  history.rs  lib.rs  shell_words.rs  syntax.rs  tests.rs  undo.rs  vim.rs
commands41/src/completion/: path.rs
config41/: Cargo.toml
config41/src/: command_editor.rs  compatibility.rs  deserialize.rs  keybindings.rs  lib.rs  palette.rs  runtime.rs  schema.rs  security.rs
examples/: sys_info.lua
font41/: Cargo.toml
font41/resources/: drawing_symbols.txt
font41/src/: attrs.rs  bitmap.rs  charmap.rs  color_tables.rs  colr.rs  drcs.rs  families.rs  legacy.rs  lib.rs  loader.rs  metrics.rs  rasterize.rs  shape.rs  tests.rs
history41/: Cargo.toml
history41/src/: lib.rs
hooks41/: Cargo.toml
hooks41/src/: lib.rs
image41/: Cargo.toml
image41/src/: ffmpeg_decoder.rs  iterm.rs  kitty.rs  lib.rs  sixel.rs
pty-pipe41/: Cargo.toml
pty-pipe41/src/: lib.rs
resources/: drawing_symbols.txt
resources/completions/: cargo.json  git-and-cargo.json  git.json
scripts/: extract_emoji_list.py  install_desktop_assets.sh
selftest41/: Cargo.toml
selftest41/resources/: icon.drcs  icon.six
selftest41/src/: app.rs  capabilities.rs  demo.rs  main.rs  terminal_io.rs  ui.rs
shellhist41/: Cargo.toml
shellhist41/src/: lib.rs
src/: clipboard.rs  command_catalog.rs  config.rs  font.rs  history_runtime.rs  image.rs  keybindings.rs  kitty.rs  lib.rs  main.rs  output_recording.rs  perf_ctrl_c.rs  pty.rs  renderer.rs  scripting.rs  search.rs  selection.rs  sixel.rs  terminal.rs  vte.rs  window_host.rs
src/font/: bitmap.rs  colr.rs  svg.rs
src/image/: ffmpeg_decoder.rs  iterm.rs  kitty.rs  sixel.rs
src/renderer/: background.rs  command_editor_config.rs  frame_state.rs  glyph_atlas.rs  grid.rs  gutter_popup.rs  image_atlas.rs  impl.rs  input_encoding.rs  paint.rs  pasted_background.rs  permissions.rs  script_status.rs  shelf.rs  startup.rs  sticky_prompt.rs  tab_ui.rs  ui_state.rs
src/renderer/impl/: chrome.rs  cursor.rs  frame.rs  geometry.rs  gutter.rs  images.rs  layers.rs  layout.rs  pipelines.rs  row_cache.rs  tests.rs  text.rs  uploads.rs  vertices.rs
src/renderer/impl/chrome/: command_editor.rs  command_palette.rs  cursor.rs  gutter_popup.rs  history_confirmation.rs  history_deletion.rs  label.rs  permission_modal.rs  popup.rs  preedit.rs  recording_popup.rs  search.rs  status_line.rs  tab_bar.rs  toast.rs
src/renderer/shaders/: bg.wgsl  bg_image.wgsl  fg.wgsl  image.wgsl  layer.wgsl
src/shaders/: bg.wgsl  fg.wgsl  image.wgsl
src/terminal/: color.rs  cursor.rs  grid.rs  image.rs  keyboard.rs  mouse.rs  osc.rs  parser.rs  row.rs  screen.rs
src/window_host/: command_editor.rs  command_palette.rs  events.rs  history_deletion.rs  input.rs  mouse.rs  startup.rs  state.rs  tests.rs
terminal41/: Cargo.toml
terminal41/src/: apply.rs  charset.rs  clipboard.rs  color.rs  conformance.rs  cursor.rs  dcs.rs  dec.rs  dec_color.rs  decmacro.rs  dispatch.rs  drcs.rs  effects.rs  feature.rs  feature_ops.rs  graphics.rs  grid.rs  host.rs  hyperlink.rs  image.rs  io.rs  iterm_features.rs  keyboard.rs  lib.rs  lifecycle_ops.rs  metadata.rs  mode.rs  mouse.rs  osc.rs  palette_sync.rs  parser.rs  processing.rs  prompt.rs  prompt_ops.rs  protocol_state.rs  report.rs  row.rs  runtime.rs  screen.rs  selection.rs  (+8 more)
terminal41/src/dec/: color.rs  macro.rs  udk.rs
terminal41/src/io/: clipboard.rs  keyboard.rs  mouse.rs
terminal41/src/osc/: clipboard.rs  color_query.rs  directory.rs  hyperlink.rs  iterm.rs  shell_integration.rs  title.rs
terminal41/src/parser/: csi.rs  esc.rs  status.rs  text.rs  write.rs
terminal41/src/parser/csi/: private_modes.rs  tests.rs
terminal41/src/screen/: grid.rs  hyperlink.rs  palette_sync.rs  row.rs
terminal41/src/screen/grid/: edit.rs  rect.rs  reflow.rs  scroll.rs
terminal41/src/selection/: active.rs  coords.rs  model.rs  rendered.rs  search.rs  text.rs  word.rs
terminal41/tests/: vttest.rs
utils41/: Cargo.toml
utils41/src/: lib.rs
vte-mode41/: Cargo.toml
vte-mode41/src/: lib.rs
vtepp/: Cargo.toml
vtepp/src/: lib.rs
