[package]
name         = "term41"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.95.0"
license      = "Unlicense"

[workspace]
members = [
  "clip41",
  "font41",
  "image41",
  "pty-pipe41",
  "selftest41",
  "terminal41",
  "utils41",
  "vte-mode41",
  "vtepp",
]

[workspace.dependencies]
base64               = "0.22.1"
bitflags             = "2.11.1"
clip41               = { path = "clip41" }
cueue                = "0.6.0"
flate2               = "1.1.9"
font41               = { path = "font41" }
image41              = { path = "image41" }
infer                = { version = "0.19.0", default-features = false }
log                  = "0.4.29"
palette              = { version = "0.7.6", default-features = false, features = [
  "named",
  "named_from_str",
  "std",
] }
parking_lot          = { version = "0.12.5" }
png                  = "0.18.1"
pty-pipe41           = { path = "pty-pipe41" }
serde                = { version = "1.0.228", features = ["derive"] }
smol_str             = "0.3.6"
unicode-segmentation = "1.13.2"
unicode-width        = "0.2.2"
utils41              = { path = "utils41" }
vte-mode41           = { path = "vte-mode41" }
vtepp                = { path = "vtepp" }

[[bench]]
harness = false
name    = "vte_parse"

[dependencies]
atomic-write-file              = "0.3.0"
bitflags.workspace             = true
bytemuck                       = { version = "1.25.0", features = [
  "derive",
  "extern_crate_alloc"
] }
clip41.workspace               = true
cueue.workspace                = true
dirs                           = "6.0.0"
evictor                        = "0.7.2"
flate2.workspace               = true
font41.workspace               = true
fontdb                         = "0.23.0"
harfrust                       = "0.6.0"
image41.workspace              = true
infer.workspace                = true
log.workspace                  = true
notify                         = "8.2.0"
open                           = "5.3.4"
palette.workspace              = true
parking_lot.workspace          = true
png.workspace                  = true
pollster                       = "0.4.0"
pty-pipe41.workspace           = true
serde.workspace                = true
serde_ignored                  = "0.1.14"
shellexpand                    = "3.1.2"
smol_str.workspace             = true
softbuffer                     = "0.4.8"
terminal41                     = { path = "terminal41" }
time                           = { version = "0.3.47", features = [
  "formatting",
  "local-offset",
  "macros"
] }
toml                           = "1.1.2"
tracing                        = "0.1.44"
tracing-subscriber             = { version = "0.3.23", features = ["env-filter"] }
unicode-segmentation.workspace = true
unicode-width.workspace        = true
utils41.workspace              = true
vtepp.workspace                = true
wgpu                           = { version = "29.0.1", default-features = false, features = [
  "gles",
  "serde",
  "wgsl"
] }
winit                          = "0.30.13"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = [
  "html_reports"
] }

[features]
default              = ["ffmpeg", "wayland-data-control"]
deadlock-detection   = ["parking_lot/deadlock_detection"]
# Pulls in ffmpeg-next so image protocols can decode formats outside the
# built-in PNG path (animated GIF is the motivating case). Requires the
# libav* dev packages on the host; leave off for lightweight builds.
ffmpeg               = ["image41/ffmpeg"]
# Software-only rendering mode which doesn't require a GPU or graphics drivers.
# This does not currently work with background images.
software-only        = []
# Adds a hook which tracks Ctrl+C hits in the PTY output stream, allowing us
# to measure end-to-end latency of Ctrl+C for performance testing. Used only
# for development.
testonly-perf-ctrl-c = []
# Pulls in the wgpu vulkan feature, enabling pipeline caching on Vulkan.
# The cache can improve startup times by avoiding shader compilation,
# but vulkan sometimes just takes O(seconds) to startup even with caching,
# which makes us look bad so it's off by default.
vulkan               = ["wgpu/vulkan"]
# Enables arboard's zwlr_data_control_manager_v1 backend on Wayland, giving
# access to compositors that implement the protocol (sway, wayfire, Hyprland,
# etc.) without requiring a focused-window hack. Disable only for
# environments where the dependency is unavailable.
wayland-data-control = ["clip41/wayland-data-control"]

[profile.release-debug]
inherits = "release"
debug    = true
