[package]
name    = "font41"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags.workspace = true
flate2.workspace   = true
fontdb             = "0.23.0"
harfrust           = "0.6.0"
log.workspace      = true
memmap2            = "0.9.10"
png.workspace      = true
raqote             = { version = "0.8.5", default-features = false }
read-fonts         = "0.39.1"
resvg              = { version = "0.47.0", default-features = false }
smol_str.workspace = true
unicode-properties = "0.1.4"
