[package]
name    = "image41"
version = "0.1.1"
edition = "2024"

[dependencies]
atoi              = "2.0.0"
base64.workspace  = true
ffmpeg-next       = { version = "8.1.0", features = ["build"], optional = true }
flate2.workspace  = true
infer.workspace   = true
libc              = "0.2.184"
log.workspace     = true
palette.workspace = true
png.workspace     = true
vtepp.workspace   = true

[features]
default = ["ffmpeg"]
ffmpeg  = ["dep:ffmpeg-next"]
