[package]
name    = "terminal41"
version = "0.1.0"
edition = "2024"

[dependencies]
base64               = { workspace = true }
bitflags             = { workspace = true }
clip41               = { workspace = true }
font41               = { workspace = true }
image41              = { workspace = true }
palette              = { workspace = true }
percent-encoding     = "2.3.2"
pty-pipe41           = { workspace = true }
serde                = { workspace = true }
smol_str             = { workspace = true }
unicode-segmentation = "1.13.2"
unicode-width        = { workspace = true }
vtepp                = { workspace = true }
