[package]
name    = "terminal41"
version = "0.1.1"
edition = "2024"

[dependencies]
base64.workspace        = true
bitflags.workspace      = true
bon                     = { version = "3.9.1", default-features = false, features = [
  "std"
] }
clip41.workspace        = true
font41.workspace        = true
image41.workspace       = true
log.workspace           = true
palette.workspace       = true
parking_lot.workspace   = true
percent-encoding        = "2.3.2"
pty-pipe41.workspace    = true
serde.workspace         = true
smol_str.workspace      = true
tracing.workspace       = true
unicode-segmentation    = "1.13.2"
unicode-width.workspace = true
utils41.workspace       = true
vte-mode41.workspace    = true
vtepp.workspace         = true
